
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;
typedef int mach_port_t ;
typedef int kern_return_t ;


 int MACH_PORT_NULL ;
 int TASK_HOST_PORT ;
 int mach_host_self () ;
 int mach_port_deallocate (int ,int ) ;
 int mach_port_destroy (int ,int ) ;
 int mach_task_self () ;
 int pthread_create (int *,int *,int ,int *) ;
 int q () ;
 int racer ;
 int start ;
 int task_set_special_port (int ,int ,int ) ;

int main() {
  pthread_t thread;
  pthread_create(&thread, ((void*)0), racer, ((void*)0));
  for (;;){
    mach_port_t p = q();

    kern_return_t err = task_set_special_port(mach_task_self(), TASK_HOST_PORT, p);

    mach_port_deallocate(mach_task_self(), p);
    mach_port_destroy(mach_task_self(), p);


    start = 1;

    task_set_special_port(mach_host_self(), TASK_HOST_PORT, MACH_PORT_NULL);
  }
  return 0;
}
